[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/Shaders/outline_shader.tres" type="Shader" id=1]
[ext_resource path="res://Assets/Sprites/apple_shadow.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Green.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sprites/green_spritesheet.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/green_glow.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Apple_Animation_Manager.gd" type="Script" id=6]
[ext_resource path="res://Assets/Themes/juice_bar.tres" type="Theme" id=7]
[ext_resource path="res://Assets/Themes/health_bar.tres" type="Theme" id=8]

[sub_resource type="ShaderMaterial" id=9]
resource_local_to_scene = true
shader = ExtResource( 1 )
shader_param/width = 0.0
shader_param/outline_color = Color( 1, 0.2, 0.2, 1 )

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="CircleShape2D" id=2]
radius = 195.003

[sub_resource type="CircleShape2D" id=3]
radius = 101.4

[sub_resource type="Animation" id=4]
resource_name = "Attack"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ), Vector2( 1, 1 ), Vector2( 2, 1 ), Vector2( 3, 1 ), Vector2( 4, 1 ), Vector2( 5, 1 ), Vector2( 6, 1 ), Vector2( 7, 1 ), Vector2( 8, 1 ), Vector2( 9, 1 ), Vector2( 8, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "basic_attack"
} ]
}

[sub_resource type="Animation" id=8]
resource_name = "Cast"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 3 ), Vector2( 1, 3 ), Vector2( 2, 3 ), Vector2( 3, 3 ), Vector2( 4, 3 ), Vector2( 5, 3 ), Vector2( 6, 3 ), Vector2( 7, 3 ), Vector2( 8, 3 ), Vector2( 9, 3 ), Vector2( 9, 3 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "cast_attack"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/Glow:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.470588 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Idle"
length = 4.0
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 3.2, 3.4, 3.6, 3.8, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 1, 2, 3, 4, 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Move"
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 2 ), Vector2( 1, 2 ), Vector2( 2, 2 ), Vector2( 1, 2 ), Vector2( 0, 2 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/Glow:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="Green" type="KinematicBody2D" groups=["Units"]]
collision_mask = 7
input_pickable = true
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 9 )
texture = ExtResource( 4 )
hframes = 10
vframes = 4
frame = 20

[node name="Shadow" type="Sprite" parent="Sprite"]
show_behind_parent = true
position = Vector2( -1, 9.5 )
scale = Vector2( 1.41176, 1 )
texture = ExtResource( 2 )

[node name="Glow" type="Sprite" parent="Sprite"]
self_modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
position = Vector2( 4, 1 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3, 0 )
shape = SubResource( 1 )

[node name="Aggro_Area" type="Area2D" parent="."]
visible = false
position = Vector2( 3, 0 )
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Aggro_Area"]
shape = SubResource( 2 )

[node name="Attack_Range" type="Area2D" parent="."]
visible = false
position = Vector2( 3, 0 )
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_Range"]
shape = SubResource( 3 )

[node name="Raycasts" type="Node2D" parent="."]
visible = false

[node name="RayCast1" type="RayCast2D" parent="Raycasts"]
enabled = true
cast_to = Vector2( 50, 0 )
collision_mask = 7

[node name="RayCast2" type="RayCast2D" parent="Raycasts"]
enabled = true
cast_to = Vector2( 40, 20 )
collision_mask = 7

[node name="RayCast3" type="RayCast2D" parent="Raycasts"]
enabled = true
cast_to = Vector2( 40, -20 )
collision_mask = 7

[node name="Bars" type="Node2D" parent="."]
z_index = 2

[node name="HP_Bar" type="ProgressBar" parent="Bars"]
margin_left = -7.0
margin_top = -16.0
margin_right = 7.0
margin_bottom = -13.0
theme = ExtResource( 8 )
step = 1.0
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Juice_Bar" type="ProgressBar" parent="Bars"]
margin_left = -7.0
margin_top = -13.0
margin_right = 7.0
margin_bottom = -12.0
theme = ExtResource( 7 )
step = 1.0
value = 20.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 4 )
anims/Cast = SubResource( 8 )
anims/Idle = SubResource( 5 )
anims/Move = SubResource( 6 )
anims/RESET = SubResource( 7 )
script = ExtResource( 6 )

[node name="SFX" type="AudioStreamPlayer2D" parent="."]
volume_db = -10.0
pitch_scale = 0.8

[connection signal="body_entered" from="Aggro_Area" to="." method="_on_Aggro_Area_body_entered"]
